@startuml

' Version: 1.0.0
' Last modified: 2026-06-15
' Initial version

skinparam classAttributeIconSize 0

class Block <<aggregate root>> {
  - id
}

class NeighborRequest <<aggregate root>> {
  - id
  - date: LocalDateTime
  - status: RequestStatus
  --
  + accept()
  + reject()
}

class Neighborship <<aggregate root>> {
  - date: LocalDateTime
  - id
}

class UserId <<value object>> {
  - userId: Long
}

Block "*" --> "1" UserId : blocker
Block "*" --> "1" UserId : blocked

NeighborRequest "*" --> "1" UserId : receiver
NeighborRequest "*" --> "1" UserId : sender

Neighborship "*" --> "1" UserId : follower
Neighborship "*" --> "1" UserId : followed

@enduml
